src/renderer/scss/MainRouteRenderer.scss
@import "variables";

.node {
    &:hover {
        fill: $tt-light-gray;
    }
}

.node-type-d {
    fill: $c-dram;
    background-color: $c-dram;
}

.node-type-c {
    fill: $c-core;
    background-color: $c-core;
}

.node-type-r {
    fill: $c-router;
    background-color: $c-router;
}

.node-type-e {
    fill: $c-eth;
    background-color: $c-eth;
}

.node-type-p {
    fill: $c-pcix;
    background-color: $c-pcix;
}

.node-type {
    border-bottom: 2px solid transparent;

    &.detailed-view {
        border-bottom: 2px solid $bright-highlight;
    }
}

$dock-height: 420px;

.outer-wrapper {
    display: flex;
    flex-direction: column;
    height: 100vh;
    width: 100vw;
    overflow: hidden;


    .dock {
        margin: 0 20px;
        width: calc(100% - 40px);
        height: 0px;
        overflow: hidden;
    }

    &.dock-open {
        .dock {
            height: $dock-height - 20px;
            bottom: 0;
        }

        .main-wrapper {
            height: calc(100vh - $dock-height);
            overflow: hidden;
        }

        .grid-container {
            height: calc(100vh - 10px - $dock-height);
        }

        .properties-panel-nodes {
            max-height: calc(100vh - 100px - $dock-height);
        }

        .list-wrap {
            max-height: calc(100vh - 150px - $dock-height);
        }

        .inner-sidebar {
            max-height: calc(100vh - 20px - $dock-height);
            overflow-y: scroll;

        }
    }

    &.detailed-view-open {
        .inner-sidebar {
            max-height: calc(100vh - 640px);
            overflow-y: scroll;
        }

        .grid-container {
            height: calc(100vh - 640px);
        }
    }
}

.main-wrapper {
    margin-top: 20px;
    display: flex;
    flex-direction: row;
    gap: 20px;
}

.main-container {
    display: flex;
    gap: 50px;
    width: calc(100% - 100px);
}

.sidebar {
    display: flex;
    flex-direction: column;
    gap: 10px;
}

.inner-sidebar {
    max-height: calc(100vh - 100px);
    overflow-y: scroll;

    .inner-sidebar-wrap {
        display: flex;
        flex-direction: column;
        padding: 0 8px;

    }

    hr {
        border: none;
        width: 100%;
        border-top: 1px solid $hr;

    }

    .bp4-numeric-input {
        .bp4-input-group {
            max-width: 150px;
        }
    }
}

.grid-container {
    flex: none;
    overflow: auto;
    height: calc(100vh - 150px);
    max-width: 50vw;
    margin: 0;
    padding: 5px;

    &.pipes-hidden {
        .node-svg {
            display: none;
        }
    }

    .node-container {
        display: grid;

        .node-item {
            width: 100px;
            height: 100px;
            position: relative;
            border: 1px solid $tt-very-dark-gray;

            .op-color-swatch {
                width: 20px;
                height: 20px;
                position: absolute;
                top: 0;
                right: 20px;
            }

            .node-location {
                position: absolute;
                top: 0;
                left: 20px;
            }

            &.selected {
                .node-border {
                    $inset: 4px;
                    border: 2px solid $node-select;
                    position: absolute;
                    top: $inset;
                    left: $inset;
                    bottom: $inset;
                    right: $inset;
                    z-index: 0;
                }

                &.detailed-view {
                    .node-border {
                        border: 2px solid $bright-highlight;
                    }
                }
            }

            &.core-highlight-input,
            &.core-highlight-output {
                .core-highlight {
                    $inset: 7px;
                    position: absolute;
                    top: $inset;
                    left: $inset;
                    bottom: $inset;
                    right: $inset;
                    z-index: 0;
                }
            }

            &.core-highlight-input {
                .core-highlight {
                    border: 2px solid $core-highlight-inout;
                }
            }

            &.core-highlight-output {
                .core-highlight {
                    border: 2px solid $core-highlight-output;
                }
            }

            .group-border,
            .operand-wrap,
            .off-chip-congestion,
            .dram-border {
                width: 100%;
                height: 100%;
                position: absolute;
                top: 0;
                left: 0;
                bottom: 0;
                right: 0;
                z-index: 0;
            }

            .off-chip-congestion {
                width: unset;
                height: unset;
                $inset: 6px;
                top: $inset;
                left: $inset;
                bottom: $inset;
                right: $inset;
            }

            .operand-wrap {
                display: flex;
                flex-direction: row;
                flex-wrap: wrap;
            }

            .operand {
                width: 20px;
                height: 20px;
                opacity: 0.5;
            }

            .node-type-label {
                position: absolute;
                width: 20px;
                height: 20px;
                top: 0;
                right: 0;
                color: $tt-very-dark-gray;
                font-size: 16px;
                line-height: 1;
                display: flex;
                align-items: center;
                justify-content: center;
                z-index: 0;
            }

            .node-focus-svg,
            .node-svg {
                position: absolute;
                z-index: 1;
            }

            .node-svg {
                &.focus-mode {
                    opacity: 0.15;
                }
            }
        }
    }


}


.opname {
    overflow-x: hidden;
}

.properties-panel {
    background-color: $tt-medium-light-gray;
    padding: 10px;
    flex-grow: 1;
    overflow-x: scroll;
    white-space: nowrap;

    .properties-panel__content {
        display: inline-flex;
        flex-wrap: wrap;
        gap: 10px;
    }
}


.properties-panel-nodes {
    display: flex;
    flex-wrap: nowrap;
    overflow-x: scroll;
    overflow-y: scroll;
    width: 100%;
    gap: 20px;
    max-height: calc(100vh - 200px);


    .node-element {
        width: 25%;
        height: 100%;
        min-width: 260px;
        display: flex;
        flex-direction: column;
        gap: 10px;
        background-color: $tt-off-background;
        padding: 10px;


        h3 {
            color: $tt-black;
            padding: 5px;
            display: flex;
            align-items: center;
            justify-content: space-between;
        }

        .io-label {
            color: $tt-white-text;
            margin-bottom: 5px;
        }

        .node-controls {
            display: flex;
            flex-direction: column;
            align-items: flex-start;
            gap: 10px;
            margin-bottom: 10px;
        }
    }

    .producer-consumer {
        margin-bottom: 10px;
        margin-left: 1px;

        h3 {
            margin-left: -10px;
            color: $tt-white-text;
        }

        h2 {
            max-width: 50vw;
            display: inline-block;
            text-wrap: wrap;
            word-break: break-word;
            color: $tt-white-text;
        }
    }
}

.node-links-wrap {
    background-color: $tt-off-background; //#494949;

    .link-title-details {
        position: relative;
        display: flex;
        justify-content: flex-start;
        flex-direction: row;
        align-content: center;
        gap: 10px;
        margin-bottom: 5px;
        color: $tt-white-text;

        span {
            color: $tt-white-text;
        }

        &.inactive,
        &.inactive span {
            color: $tt-medium-gray;

            input {
                opacity: 0.5;
            }
        }
    }

}

.node-pipelist,
.scrollable-content {
    list-style: none;
    margin: 0;
    padding: 0;
    padding-left: 20px;
    padding-bottom: 5px;
    display: flex;
    flex-direction: column;

    li {

        padding-top: 4px;
        padding-left: 5px;
        font-size: 12px;
        padding-bottom: 5px;
        display: inline-flex;
        align-items: center;
        font-weight: 100;

        .bp4-control.bp4-checkbox {
            margin-bottom: 0;
        }

        .label {
            position: relative;
            display: inline-flex;
            align-items: center;
            gap: 5px;
        }
    }

    .color-swatch {
        width: 10px;
        height: 10px;
        border: 1px solid $tt-white-text;
        display: inline-block;

        &.transparent {
            display: none;
        }
    }
}


.list-wrap {
    overflow-y: scroll;
    max-height: calc(100vh - 240px);
    width: 100%;
    margin-top: 20px;

    .scrollable-content {
        width: 100%;
        padding-left: 0;
    }

    li {
        span {
            color: $tt-very-dark-gray;
        }
    }
}

.pipe-renderer-panel {
    display: flex;
    flex-direction: column;

    ul[role='listbox'] {
        overflow-y: scroll;
        max-height: 80vh;
    }

    .is-selected-pipe {
        background-color: $pipe-select;
    }
}

.properties-tabs {
    .bp4-tab {
        background-color: $tt-medium-light-gray;
        color: $tt-black;
        font-size: 16px;

        &[aria-selected="true"] {
            color: $tt-black;
        }
    }
}

.search-field {
    display: flex;
    min-width: 250px;

    .bp4-input-group {
        display: flex;
        align-items: center;

        .bp4-input-action {
            top: unset;

            > .bp4-icon {
                margin-right: 5px;

                svg {
                    fill: $tt-dark-gray
                }
            }
        }
    }
}

.opname,
.operations-wrap {
    .op-element {
        color: $tt-black;
        display: flex;
        gap: 5px;
        justify-items: center;
        align-items: center;

        .color-swatch {
            width: 10px;
            height: 10px;
            border: 1px solid $tt-white-text;
            display: inline-block;

            &.transparent {
            }
        }
    }

    label {
        margin-bottom: 0;
    }

    .io-label {
        margin-left: 12px;
    }

    .operation-input {
        margin-bottom: 5px;
        margin-left: 20px;

        p {
            margin-bottom: 0;
            font-size: 12px;
        }
    }
}

.opname {
    span {
        color: $tt-white-text;
    }
}

.bp4-control input:focus ~ .bp4-control-indicator {
    outline: none;
    box-shadow: none;
}

.congested-link {
    color: #ff0000;
}

.progress-bar {
    width: 100px;
    background-color: $progress-bar-track;
    height: 4px;
    position: absolute;
    bottom: -2px;

    span {
        background-color: $progress-bar-fill;
        height: 4px;
        display: block;
    }
}


.link-saturation-slider {
    .bp4-slider-track {
        .bp4-slider-progress {
            background-color: $link-saturation-track;

            &.bp4-intent-primary,
            &:first-of-type {
                background-color: $link-saturation-fill;
            }
        }
    }
}

